; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableModelGiveColor.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableModelGiveColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, double, double, double }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uiTableModelGiveColor(double %0, double %1, double %2, double %3) #0 {
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca %struct.TYPE_3__, align 8
  store double %0, double* %5, align 8
  store double %1, double* %6, align 8
  store double %2, double* %7, align 8
  store double %3, double* %8, align 8
  %10 = load double, double* %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store double %10, double* %11, align 8
  %12 = load double, double* %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  store double %12, double* %13, align 8
  %14 = load double, double* %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  store double %14, double* %15, align 8
  %16 = load double, double* %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  store double %16, double* %17, align 8
  %18 = call i8* @gdk_rgba_copy(%struct.TYPE_3__* %9)
  ret i8* %18
}

declare dso_local i8* @gdk_rgba_copy(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
